[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/barrelBlack_top.png" type="Texture" id=1]
[ext_resource path="res://scripts/Destructable.gd" type="Script" id=2]
[ext_resource path="res://scripts/BarrelBlack.gd" type="Script" id=3]
[ext_resource path="res://sprites/explosion5.png" type="Texture" id=4]
[ext_resource path="res://sprites/explosion3.png" type="Texture" id=5]
[ext_resource path="res://sprites/explosion2.png" type="Texture" id=6]
[ext_resource path="res://sprites/explosion1.png" type="Texture" id=7]
[ext_resource path="res://sprites/explosion4.png" type="Texture" id=8]
[ext_resource path="res://samples/metal_barrel_hit.wav" type="AudioStream" id=9]
[ext_resource path="res://samples/small_barrel_hit_01.wav" type="AudioStream" id=10]
[ext_resource path="res://samples/small_barrel_hit_04.wav" type="AudioStream" id=11]
[ext_resource path="res://samples/small_barrel_hit_05.wav" type="AudioStream" id=12]
[ext_resource path="res://samples/small_barrel_hit_03.wav" type="AudioStream" id=13]
[ext_resource path="res://samples/small_barrel_hit_02.wav" type="AudioStream" id=14]
[ext_resource path="res://samples/barrel_explosion.wav" type="AudioStream" id=15]

[sub_resource type="CircleShape2D" id=1]
radius = 12.5668

[sub_resource type="CircleShape2D" id=2]
radius = 14.0202

[sub_resource type="Animation" id=3]
resource_name = "explode"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 4 ), null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="BarrelBlack" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.8, 0.8, 1 )
texture = ExtResource( 1 )

[node name="AreaObstacle" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource( 2 )
health = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaObstacle"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/explode = SubResource( 3 )
anims/hit = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="AudioBigHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "fx"

[node name="AudioExplode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "fx"

[node name="AudioSmallHit1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "fx"

[node name="AudioSmallHit2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "fx"

[node name="AudioSmallHit3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "fx"

[node name="AudioSmallHit4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "fx"

[node name="AudioSmallHit5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "fx"
